src/test/ui/consts/const-eval/transmute-const.64bit.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/transmute-const.rs:4:29
   |
LL | static FOO: bool = unsafe { mem::transmute(3u8) };
   |                             ^^^^^^^^^^^^^^^^^^^ type validation failed: encountered 0x03, but expected a boolean

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
